<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@drawable/round_distrito_bot"
    android:layout_height="wrap_content">

    <com.letsgo.appletsgo.app.ui.component.CustomTextView
        android:text="@string/sChooseYourDistrict"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:gravity="center"
        android:background="@drawable/round_distrito_top"
        android:layout_width="match_parent"
        android:layout_height="48dp" />

    <RelativeLayout
        android:id="@+id/rlaNearly"
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <com.letsgo.appletsgo.app.ui.component.CustomTextView
            android:textColor="@color/primary_text"
            android:id="@+id/tviNearly"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sNearly" />

        <ImageView
            android:id="@+id/iviCheckNearly"
            android:visibility="gone"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginRight="4dp"
            android:src="@drawable/ic_check_circle"
            android:layout_alignTop="@+id/tviNearly"
            android:layout_toStartOf="@+id/tviNearly" />
    </RelativeLayout>

    <LinearLayout
        android:background="@color/liner_color"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <RelativeLayout
        android:id="@+id/rlaAllDistrito"
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <com.letsgo.appletsgo.app.ui.component.CustomTextView
            android:textColor="@color/primary_text"
            android:id="@+id/tviAllDistrito"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sAllDistricts" />

        <ImageView
            android:id="@+id/iviCheckAllDistrito"
            android:visibility="gone"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginRight="4dp"
            android:src="@drawable/ic_check_circle"
            android:layout_alignTop="@+id/tviAllDistrito"
            android:layout_toStartOf="@+id/tviAllDistrito" />
    </RelativeLayout>

    <LinearLayout
        android:background="@color/liner_color"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>


    <com.letsgo.appletsgo.app.ui.component.DistritoComponent
        android:id="@+id/llaDistritoComponent"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </com.letsgo.appletsgo.app.ui.component.DistritoComponent>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.letsgo.appletsgo.app.ui.component.CustomTextView
            android:id="@+id/tviCancelarDialogDistrito"
            android:text="Cancelar"
            android:textColor="@color/secondary_text"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="48dp" />
        <LinearLayout
            android:background="@color/liner_color"
            android:layout_width="1dp"
            android:layout_height="match_parent"></LinearLayout>
        <com.letsgo.appletsgo.app.ui.component.CustomTextView
            android:id="@+id/tviAceptarFilterDistrito"
            android:text="Aceptar"
            android:textColor="@color/colorPrimaryDark"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="48dp" />

    </LinearLayout>

</LinearLayout>