<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.letsgo.appletsgo.app.ui.activity.MainActivity">

    <include
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:id="@+id/include"
        layout="@layout/content_main"
        android:layout_below="@+id/rlaHeadToolBar"
        android:layout_height="match_parent"
        android:layout_width="match_parent"/>

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/famCalendar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        fab:menu_icon="@drawable/school_calendar"
        android:layout_gravity="bottom|end"
        fab:menu_colorNormal="@color/bg_facebook_two"
        fab:menu_fab_size="normal"
        fab:menu_animationDelayPerItem="0"
        fab:menu_backgroundColor="#A6000000"
        fab:menu_labels_ellipsize="end"
        fab:menu_shadowRadius="4dp"
        android:layout_centerHorizontal="true">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fabSelectDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/school_calendar"
            style="@style/MenuButtonsStyle"
            fab:fab_label="@string/select_date" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fabThisWeek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/school_calendar"
            style="@style/MenuButtonsStyle"
            fab:fab_label="@string/this_week" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fabToday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/school_calendar"
            style="@style/MenuButtonsStyle"
            fab:fab_label="@string/today"/>

    </com.github.clans.fab.FloatingActionMenu>


    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <RelativeLayout
            android:id="@+id/rlaHeadToolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_toolbar"
            app:layout_scrollFlags="scroll|enterAlways">

            <RelativeLayout
                android:id="@+id/rlaToolBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize">

                <ImageView
                    android:id="@+id/iviMenu"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"
                    android:src="@drawable/ic_menu" />

                <ImageView
                    android:id="@+id/iviLogo"
                    android:layout_width="59dp"
                    android:layout_height="20dp"
                    android:layout_alignBottom="@+id/iviMenu"
                    android:layout_marginLeft="16dp"
                    android:layout_toEndOf="@+id/iviMenu"
                    android:src="@drawable/lets_go" />

                <ImageView
                    android:id="@+id/iviLike"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="16dp"
                    android:src="@drawable/ic_favorite_24dp" />

                <ImageView
                    android:id="@+id/iviSearch"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="16dp"
                    android:layout_toStartOf="@+id/iviLike"
                    android:src="@drawable/ic_search_24dp" />


            </RelativeLayout>

            <LinearLayout
                android:id="@+id/tabLayout"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_below="@+id/rlaToolBar"
                android:orientation="horizontal">

                <RelativeLayout
                    android:id="@+id/rlaFilterAll"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <LinearLayout
                        android:id="@+id/llaLinearFilter"
                        android:layout_width="match_parent"
                        android:layout_height="4dp"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentStart="true"
                        android:layout_gravity="bottom"
                        android:layout_marginLeft="2dp"
                        android:layout_marginRight="2dp"
                        android:background="@color/white"
                        android:orientation="vertical" />


                    <RelativeLayout
                        android:id="@+id/rlaCirculeCart"
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="4dp"
                        android:layout_toEndOf="@+id/tviFiltros"
                        android:background="@drawable/pop_filtro"
                        android:fromXScale="0.0"
                        android:fromYScale="0.0"
                        android:gravity="center"
                        android:toXScale="0.0"
                        android:toYScale="0.0">

                        <com.letsgo.appletsgo.app.ui.component.CustomTextView
                            android:id="@+id/tviQuantityFilter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:tag="3"
                            android:text="3"
                            android:textColor="@color/colorPrimary"
                            android:textSize="14sp" />

                    </RelativeLayout>

                    <com.letsgo.appletsgo.app.ui.component.CustomTextView
                        android:id="@+id/tviFiltros"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:gravity="center"
                        android:tag="2"
                        android:text="Filtros"
                        android:textColor="@color/white" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rlaFree"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <LinearLayout
                        android:id="@+id/llaLinearFree"
                        android:layout_width="match_parent"
                        android:layout_height="4dp"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentStart="true"
                        android:layout_gravity="bottom"
                        android:layout_marginLeft="2dp"
                        android:layout_marginRight="2dp"
                        android:background="@color/white"
                        android:orientation="vertical"
                        android:visibility="invisible" />

                    <com.letsgo.appletsgo.app.ui.component.CustomTextView
                        android:id="@+id/tviFree"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:gravity="center"
                        android:tag="1"
                        android:text="Gratis"
                        android:textColor="@color/white" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rlaBtnDistrito"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <LinearLayout
                        android:id="@+id/linearLayout"
                        android:layout_width="match_parent"
                        android:layout_height="4dp"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentStart="true"
                        android:layout_gravity="bottom"
                        android:layout_marginLeft="2dp"
                        android:layout_marginRight="2dp"
                        android:background="@color/white"
                        android:orientation="horizontal"
                        android:visibility="invisible" />

                    <com.letsgo.appletsgo.app.ui.component.CustomTextView
                        android:id="@+id/tviDistrito"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:gravity="center"
                        android:tag="1"
                        android:text="Distrito"
                        android:textColor="@color/white" />

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@+id/tviDistrito"
                        android:src="@drawable/ic_distrito_arrow_24dp" />

                </RelativeLayout>
            </LinearLayout>

        </RelativeLayout>


    </android.support.design.widget.AppBarLayout>


</android.support.design.widget.CoordinatorLayout>